# diversimax_algorithm

./: LICENSE  README.md  index.html  pyproject.toml  requirements.txt
diversimax/: algorithm.py  main.py  models.py  utils.py
docs/: index.html
docs/css/: comparison-component.css  style.css
docs/js/: comparison-component.js
example_data/: categories_exact_ranges.csv  categories_wide_ranges.csv  participants_pool.csv
